--- a/.github/snake.yml
+++ b/.github/snake.yml
@@ -18,14 +18,14 @@ jobs:
     timeout-minutes: 5
 
     steps:
-      - name: generate snake.yml
-        uses: Platane/snk/yml-only@v3
+      - name: generate snake.svg
+        uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{mushfiqur47 }}
-          outputs: dist/snake.yml?palette=github-dark
+          github_user_name: ${{ mushfiqur47 }}
+          outputs: dist/snake.svg?palette=github-dark
 
 
-      - name: push snake.yml to the output branch
+      - name: push snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
           target_branch: output
